Bug 1676543 - Remove some invalid assertions. r=heycam

We might clear this flag in PostRebuildAllStyleData before actually
flushing style, so if the timing is wrong you can hit this assertion.

This doesn't impact correctness in any way that I can see.

Differential Revision: https://phabricator.services.mozilla.com/D96685